--- a/index.html
+++ b/index.html
@@ -44,13 +44,21 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/fireworkskid512.png" alt="Fireworks" />
+										<img src="images/knifegame.png" alt="Knife Game" />
 									</span>
-									<a href="fireworks-kids.html">
-										<h2 class='articleTitle'>Fireworks Baby</h2>
+									<a href="knifegame.html">
+										<h2 class='articleTitle'>Knife Game</h2>
 									</a>
 								</article>
-							 	<article>
+								<article>
+									<span class="image">
+										<img src="images/basketball.png" alt="Basketball" />
+									</span>
+									<a href="basketball.html">
+										<h2 class='articleTitle'>Basketball</h2>
+									</a>
+								</article>
+								<article>
 									<span class="image">
 										<img src="images/spaceman512.png" alt="Spaceman" />
 									</span>
@@ -58,23 +66,25 @@
 										<h2 class='articleTitle'>Spaceman</h2>
 									</a>
 								</article>
-							 	<article>
+								<!-- <article>
+									<span class="image">
+										<img src="images/fireworkskid512.png" alt="Fireworks" />
+									</span>
+									<a href="fireworks-kids.html">
+										<h2 class='articleTitle'>Fireworks Baby</h2>
+									</a>
+								</article> -->
+							 	
+							 	<!-- <article>
 									<span class="image">
 										<img src="images/cowboygunshooting512.png" alt="Cowboy Gun Shooting" />
 									</span>
 									<a href="cowboygunshooting.html">
 										<h2 class='articleTitle'>Cowboy Gun Shooting</h2>
 									</a>
-								</article>
-							 	<article>
-									<span class="image">
-										<img src="images/knifegame.png" alt="Duck Hunter" />
-									</span>
-									<a href="knifegame.html">
-										<h2 class='articleTitle'>Knife Game</h2>
-									</a>
-								</article>
-								<article>
+								</article> -->
+
+								<!-- <article>
 									<span class="image">
 										<img src="images/oneinchpunch512.png" alt="Spaceman" />
 									</span>
@@ -90,31 +100,31 @@
 										<h2 class='articleTitle'>Basketball</h2>
 									</a>
 								</article>
-								<article>
+								<!-- <article>
 									<span class="image">
 										<img src="images/bamboodancing.png" alt="Bamboo Dancing Icon" />
 									</span>
 									<a href="bamboodancing.html">
 										<h2 class='articleTitle'>Bamboo Dancing</h2>
 									</a>
-								</article>
-								<article>
+								</article> -->
+								<!-- <article>
 									<span class="image">
 										<img src="images/twinflyicon512.png" alt="Twin Fly Icon" />
 									</span>
 									<a href="twinfly.html">
 										<h2 class='articleTitle'>Twin Fly</h2>
 									</a>
-								</article>
+								</article> -->
 								<article>
 									<span class="image">
 										<img src="images/eggdunkicon512.png" alt="Egg Dunk Icon" />
 									</span>
 									<a href="eggdunk.html">
-										<h2 class='articleTitle'>Egg Dunk 3D</h2>
+										<h2 class='articleTitle'>Egg Dunk</h2>
 									</a>
 								</article>
-								<article>
+								<!-- <article>
 									<span class="image">
 										<img src="images/protectislandicon512.png" alt="Protect Island" />
 									</span>
@@ -129,7 +139,7 @@
 									<a href="duckhunter.html">
 										<h2 class='articleTitle'>Duck Hunter</h2>
 									</a>
-								</article>
+								</article> -->
 								
 							</section>
 						</div>
